frontend/src/styles/Navbar.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
.navbar {
    display: flex;
    justify-content: space-between;
    background: -webkit-linear-gradient(to right, #ABD2FA, #7692FF);
    background: linear-gradient(to right, #eff2fc 40%,#CCCCFF 120%);
  }
  
  .navbar h1 {
    color: white;
  }
  
  .navbar ul {
    list-style: none;
    display: flex;
  }
  
  .navbar ul li {
    margin-left: 20px;
  }
  
  .navbar ul li a {
    font-family: manrope;
    color: rgb(0, 0, 0);
    text-decoration: none;
    font-size: 1rem;
    font-weight: 600;
  }
  
  .navbar ul li a:hover {
    text-decoration: underline;
    text-decoration-color: blue;
  }
  
  .logo-image {
    width: 10vw; /* Set the width you need */
    height: auto; /* Maintains the aspect ratio */
  }

